<resources>
    <string name="app_name">Real-World Wind</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="completed_challenges">Completed challenges</string>
    <string name="your_logs">Your previous smartphone overloads</string>
    <string name="current_challenge">Current challenge</string>
    <string name="challenges_amount">(%s)</string>
    <string name="your_answer">Your answer...</string>
    <string name="your_current_challenge_will_be_shown_here">Are you experiencing a smartphone overload?</string>
    <string name="why_do_you_want_to_exchange_this_challenge">Why do you want to exchange this challenge?</string>
    <string name="how_strongly_do_you_agree">How strongly do you agree with the following statements?</string>
    <string name="thank_you">Thank you for completing the challenge!</string>
    <string name="statement_helped_balance_OLD">The challenge helped me improve my life-technology balance.</string>
    <string name="statement_increased_awareness">The challenge increased my real world awareness.</string>
    <string name="statement_enjoyed">I enjoyed doing the challenge.</string>
    <string name="statement_bored">I felt bored while doing the challenge.</string>
    <string name="statement_happy">I feel happy after doing the challenge.</string>
    <string name="statement_annoyed">I feel annoyed after doing the challenge.</string>
    <string name="statement_improved_wellbeing">The challenge helped me improve my wellbeing.</string>
    <string name="statement_helped_balance">The challenge helped me to balance real and digital activities.</string>
    <string name="statement_same_balance">Compared to before doing the challenge, my life-technology balance feels the same.</string>
    <string name="add_your_own_challenge">Add your own challenge</string>
    <string name="choose_category">Choose your categories</string>
    <string name="chose_cat_relaxing">Relaxing</string>
    <string name="chose_cat_mental">Mental</string>
    <string name="chose_cat_physical">Physical</string>
    <string name="chose_cat_social">Social</string>
    <string name="chose_cat_organizing">Organizing</string>
    <string name="chose_cat_misc">Misc</string>
    <string name="chose_cat_personalized">One of my own</string>
    <string name="chose_cat_random">Give me a random challenge</string>
    <string name="describe_your_challenge">Describe your challenge</string>
    <string name="select_category">Select which category it belongs to</string>
    <string name="your_logs_will_be_shown_here">If you are currently experiencing smartphone overload, please press the button below.</string>
    <string name="the_challenge_is_boring">I find the challenge boring</string>
    <string name="i_dont_have_enough_time">I do not have enough time</string>
    <string name="i_dont_want_to">I do not feel like completing it</string>
    <string name="the_challenge_is_too_difficult">The challenge is too difficult to execute</string>
    <string name="my_current_circumstances_dont_allow_it">My current circumstances do not allow it</string>
    <string name="other_reason">Other reason:</string>
    <string name="cancel_challenge">Do you want to cancel this challenge?</string>
    <string name="always_hide_challenge">I want to always hide this challenge</string>
    <string name="checkbox_feel_overload">I did not experience a smartphone overload</string>
    <string name="why_do_you_want_to_cancel_this_challenge">Why do you want to cancel this challenge?</string>
    <string name="wifi_settings">What is your home wifi?</string>
    <string name="wifi_1">Wifi 1</string>
    <string name="needs_usage_stats_permission">RealWorldWind needs access to usage statistics to analyze which apps lead to smartphone overload. Please press the button to proceed to Settings, in order to give RealWorldWind the permission.</string>
    <string name="category_relaxing_exercise">Relaxation</string>
    <string name="category_mental_exercise">Mental Exercise</string>
    <string name="category_physical_exercise">Physical Exercise</string>
    <string name="category_social_exercise">Socializing</string>
    <string name="category_organizing_activity">Organization</string>
    <string name="category_misc">Misc</string>
    <string name="title_snooze">For how many minutes would you like to snooze?</string>
    <string name="textview_snooze">I want to snooze for </string>
    <string name="textview_snooze_min"> minutes</string>
    <string name="strongly_disagree">strongly disagree</string>
    <string name="strongly_agree">strongly agree</string>
    <string name="i_dont_know">I don\'t know</string>
    <string name="empty"></string>
    <string name="studyID">Please use the <b>StudyID from the questionnaire</b> consisting of 6 digits <b>XXYYZZ</b> with: \n\n&#8226; <b>XX</b>: first two letters of your birthplace\n&#8226; <b>YY</b>: the days of your birthday\n&#8226; <b>ZZ</b>: first two letters of the street you live at</string>
    <string name="studyIDxx">&#8226;<b>XX</b> are the first two letters of your birthplace.</string>
    <string name="studyIDyy">&#8226;<b>YY</b> are the days of your birthday.</string>
    <string name="studyIDzz">&#8226;<b>ZZ</b> are the first two letters of the street you live at.</string>
    <string name="what_context">What context were you in when the smartphone overload was detected?</string>
    <string name="work">Work</string>
    <string name="outside">Outside</string>
    <string name="home">Home</string>
    <string name="other">Other: </string>
    <string name="send">Send</string>
    <string name="zero">0</string>
    <string name="snooze">Snooze</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="close">Close</string>
    <string name="exchange">Exchange</string>
    <string name="please_restart">Please restart the App to have it working.</string>
    <string name="app_stopped">Seems that the app was either stopped by the System or a connection to the database could not be established.</string>



</resources>