<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="@string/add_your_own_challenge"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--TextView
        android:id="@+id/textview_describe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:text="@string/describe_your_challenge"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_add" /-->

    <EditText
        android:id="@+id/edittext_add_challenge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:hint="Challenge..."
        android:textSize="17sp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_add" />

    <TextView
        android:id="@+id/textview_select_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:text="@string/select_category"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_add_challenge" />

    <RadioGroup
        android:id="@+id/radiogroup_categories"
        android:checkedButton="@+id/radio_cat_relaxing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_select_category">

        <RadioButton
            android:id="@+id/radio_cat_relaxing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_relaxing_exercise"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/radio_cat_mental"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_mental_exercise"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/radio_cat_physical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_physical_exercise"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/radio_cat_social"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_social_exercise"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/radio_cat_organizing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_organizing_activity"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/radio_cat_misc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_misc"
            android:textSize="16sp" />
    </RadioGroup>

    <Button
        android:id="@+id/add_challenge_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"
        android:text="Add"
        android:backgroundTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiogroup_categories"
        app:layout_constraintVertical_bias="0.053" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>